--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
 mysqlclient==2.0.3
+Pillow==9.2.0
 PyJWT==2.2.0
 pytz==2021.3
 sqlparse==0.4.2
