--- a/vue/package.json
+++ b/vue/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-advanced-cropper": "^1.11.5",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-router": "^3.5.3",
     "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0",
